--- a/cloud_lb/templates/cloud.conf
+++ b/cloud_lb/templates/cloud.conf
@@ -1,6 +1,6 @@
 upstream {{cloud_servername}} {
 {% for i in groups['web'] %}
-          server {{i}}:{{web_port}}；
+          server {{i}}:{{web_port}};
 {% endfor %}
 }
 server {
@@ -10,13 +10,13 @@ server {
         ssl_certificate_key server.key;
 
         location / {
-                proxy_pass http://{cloud_servername};
+                proxy_pass http://{{cloud_servername}};
                 include proxy_params;
         }
 }
 server {
         listen 80;
-        server_name {{cloud_servername}}；
+        server_name {{cloud_servername}};
 
         return 302 https://$http_host$request_uri;
 }
