--- a/keepalived/templates/keepalived.conf
+++ b/keepalived/templates/keepalived.conf
@@ -9,7 +9,7 @@ vrrp_instance VI_1 {
 {% if ansible_hostname == 'lb01' %}
     state MASTER
     priority 150
-{% if ansible_hostname == 'lb01' %}
+{% elif ansible_hostname == 'lb01' %}
     state BACKUP
     priority 100
 {% endif %}
