--- a/bash/tasks/main.yaml
+++ b/bash/tasks/main.yaml
@@ -1,11 +1,11 @@
 - name: yum
   yum:
     name: "{{packages}}"
-    state: presten
+    state: present
   vars:
     packages:
       - yum-plugin-priorities.noarch
-      - yum install epel-release
+      - epel-release
 - name: copy
   copy:
     src: "{{item.src}}"
@@ -14,8 +14,6 @@
     - { src: local-server.repo , dest: /etc/yum.repos.d/local-server.repo}
     - { src: CentOS-Base.repo , dest: /etc/yum.repos.d/CentOS-Base.repo}
     - { src: epel.repo.rpmnew , dest: /etc/yum.repos.d/epel.repo.rpmnew}
-- name: shell
-  shell: 'yum clean all && yum makecache && rpm -e ntp'
 - name: yum
   yum:
     name: "{{packages}}"
@@ -60,18 +58,7 @@
 - name: systemd
   systemd:
     name: firewalld
-    state: started
-    enabled: yes
-  when: (ansible_hostname is match (lb*))
-- name: firewalld
-  firewalld:
-    port: "{{item}}"
-    state: enabled
-    permanent: yes
-    immediate: yes
-  loop:
-    - 443/tcp
-    - 80/tcp
+    state: stopped
 - name: selinux
   selinux:
     state: disabled
