--- a/cloud_web/templates/cloud.conf
+++ b/cloud_web/templates/cloud.conf
@@ -11,6 +11,6 @@ server {
                 fastcgi_pass {{php_port}};
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 include fastcgi_params;
-                proxy_params HTTPS on;
+                fastcgi_param HTTPS on;
         }
 }
