--- a/nginx/tasks/main.yaml
+++ b/nginx/tasks/main.yaml
@@ -11,7 +11,8 @@
   yum:
     name: nginx
     state: present
-- copy:
+- name: copy
+  copy:
     src: nginx.conf
     dest: /etc/nginx/nginx.conf
   notify: restart nginx
