--- a/cloud_web/tasks/main.yaml
+++ b/cloud_web/tasks/main.yaml
@@ -9,6 +9,7 @@
     state: directory
     owner: www
     group: www
+    recurse: yes
 - name: unarchive
   unarchive:
     src: kodexplorer4.40.zip
